@@ -6,6 +6,8 @@ Version 1.5.4+svn:
   * Editor2
     * Allow changing the display time of day from a preset list or to custom
 	  values via sliders, available in the new editor settings dialog.
+	* Removed map flipping feature. Added clipboard flipping instead, which
+      works much more reliably.
 
   * Language and translations
     * updated translations: Finnish, German, Lithuanian, Slovak, Valencian.
