@@ -163,6 +163,10 @@ const struct {
 		 N_("Rotate Clipboard Clockwise"), false, hotkey::SCOPE_EDITOR },
 	{ hotkey::HOTKEY_EDITOR_CLIPBOARD_ROTATE_CCW, "editor-clipboard-rotate-ccw",
 		 N_("Rotate Clipboard Counter-Clockwise"), false, hotkey::SCOPE_EDITOR },
+	{ hotkey::HOTKEY_EDITOR_CLIPBOARD_FLIP_HORIZONTAL, "editor-clipboard-flip-horizontal", 
+		N_("Flip Clipboard Horizontally"), false, hotkey::SCOPE_EDITOR },
+	{ hotkey::HOTKEY_EDITOR_CLIPBOARD_FLIP_VERTICAL, "editor-clipboard-flip-vertical",
+		N_("Flip Clipboard Vertically"), false, hotkey::SCOPE_EDITOR },
 	{ hotkey::HOTKEY_EDITOR_SELECTION_ROTATE, "editor-selection-rotate", 
 		N_("Rotate Selection"), false, hotkey::SCOPE_EDITOR },
 	{ hotkey::HOTKEY_EDITOR_SELECTION_FLIP, "editor-selection-flip", 
@@ -177,10 +181,6 @@ const struct {
 		N_("Resize Map"), false, hotkey::SCOPE_EDITOR },
 	{ hotkey::HOTKEY_EDITOR_MAP_ROTATE, "editor-map-rotate", 
 		N_("Rotate Map"), false, hotkey::SCOPE_EDITOR },
-	{ hotkey::HOTKEY_EDITOR_MAP_FLIP_X, "editor-map-flip-x", 
-		N_("Flip Map along X axis"), false, hotkey::SCOPE_EDITOR },
-	{ hotkey::HOTKEY_EDITOR_MAP_FLIP_Y, "editor-map-flip-y", 
-		N_("Flip Map along Y axis"), false, hotkey::SCOPE_EDITOR },
 	{ hotkey::HOTKEY_EDITOR_MAP_GENERATE, "editor-map-generate",
 		 N_("Generate Map"), false, hotkey::SCOPE_EDITOR },
 	{ hotkey::HOTKEY_EDITOR_REFRESH, "editor-refresh", 
